[project]
name = "comfyui-simple-json-node"
description = "A custom node for ComfyUI to parse and extract data from JSON strings."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Q-Bug4/Comfyui-Simple-Json-Node"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Comfyui-Simple-Json-Node"
Icon = ""
